# multiple_quadrotors

./: .gitignore  README.md
src/full_system_launcher/: CMakeLists.txt  package.xml
src/full_system_launcher/launch/: gazebo_machine.launch  rviz_machine.launch  system.launch
src/full_system_launcher/rviz/: mapping.rviz  multi_slam.rviz  slam.rviz
src/quadrotor/hector_moveit/hector_moveit_actions/src/: trajectory_executer.cpp
src/quadrotor/hector_moveit/hector_moveit_config/: CMakeLists.txt
src/quadrotor/hector_moveit/hector_moveit_config/config/: ompl_planning.yaml
src/quadrotor/hector_moveit/hector_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch
src/quadrotor/hector_moveit/hector_moveit_config/src/: changer.py
src/quadrotor/hector_moveit_config/config/: ompl_planning.yaml  quadrotor.srdf
src/quadrotor/hector_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch
src/quadrotor/hector_moveit_config/src/: changer.py
src/quadrotor/hector_quadrotor/hector_quadrotor_actions/src/: takeoff_action.cpp
src/quadrotor/quadrotor_control_system/: CMakeLists.txt  package.xml
src/quadrotor/quadrotor_control_system/src/: move_drone.py
src/quadrotor/slam/: CMakeLists.txt  package.xml
src/quadrotor/slam/launch/: octomap_mapping.launch  rtab_slam.launch
src/quadrotor/slam/src/: get_map.py
src/quadrotor/trajectory_action_pkg/: CMakeLists.txt  package.xml
src/quadrotor/trajectory_action_pkg/action/: ExecuteDroneApproach.action
src/quadrotor/trajectory_action_pkg/launch/: trajectory_server.launch
src/quadrotor/trajectory_action_pkg/src/: approach.py  moveit.py
src/quadrotor/uav/: CMakeLists.txt  package.xml
src/quadrotor/uav/launch/: UAV.launch
src/system_msgs/: CMakeLists.txt  package.xml
src/system_msgs/msg/: events_message.msg  task_message.msg
src/usar_gazebo/: CMakeLists.txt  package.xml
src/usar_gazebo/launch/: base_scene.launch  home.launch  landslide.launch  post-disaster.launch
src/usar_gazebo/models/barrel/: model.config  model.sdf
src/usar_gazebo/models/barrel/meshes/: barrel.dae
src/usar_gazebo/models/collapsed_fire_station/: model.config  model.sdf
src/usar_gazebo/models/collapsed_house/: model.config  model.sdf
src/usar_gazebo/models/ground/: model.config  model.sdf
src/usar_gazebo/models/ground_plane1/: model.config  model.sdf
src/usar_gazebo/models/home/: model.sdf
src/usar_gazebo/models/landslide_dae/: landslide_heightmap1.xcf  model.config  model.sdf
src/usar_gazebo/models/landslide_heightmap/: landslide_heightmap.xcf  model.config  model.sdf
src/usar_gazebo/models/victim1/: model.config  model.sdf
src/usar_gazebo/models/victim2/: model.config  model.sdf
src/usar_gazebo/models/victim3/: model.config  model.sdf
src/usar_gazebo/models/victim4/: model.config  model.sdf
src/usar_gazebo/worlds/: base_scene.world  home.world  landslide.world  post-disaster.world  rubble.world
(+12 files in other folders)
